@@ -4,21 +4,20 @@ import com.coffeecart.ui.data.Ingredients;
 import lombok.Getter;
 
 import java.text.NumberFormat;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 public class Drink {
+
     @Getter
-    private Map<String, DrinkIngredient> drinkIngredients;
+    private Map<String, DrinkIngredient> drinkIngredients = new LinkedHashMap<>();
 
     @Getter
     private String name;
 
     public Drink(String name, DrinkIngredient... drinkIngredientList) {
         this.name = name;
-        drinkIngredients = new HashMap<String, DrinkIngredient>();
+        drinkIngredients = new LinkedHashMap<>();
         for (DrinkIngredient d : drinkIngredientList) {
             drinkIngredients.put(d.getIngredient().getName(), d);
         }
@@ -34,19 +33,10 @@ public class Drink {
         return getIngredientQuantity(ingredients.getName());
     }
     public List<Ingredients> getIngredients() {
-        return drinkIngredients.values().stream()
-                .map(DrinkIngredient::getIngredient)  // Отримуємо інгредієнт з кожного DrinkIngredient
-                .toList();  // Перетворюємо потік на список
+        return drinkIngredients.values()
+                .stream()
+                .map(DrinkIngredient::getIngredient)
+                .collect(Collectors.toList());
     }
-    public double getPrice() {
-        double sum = 0.0;
-        for (DrinkIngredient d : asCollection()) {
-            sum += (double)d.getQuantity() * d.getIngredient().getCost();
-        }
-        return sum;
-    }
-    public String getFormattedPrice() {
-        NumberFormat nf = NumberFormat.getCurrencyInstance();
-        return nf.format(getPrice());
-    }
+
 }
